<resources>
    <string name="app_name">Jibam</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="create_new_transaction">Create New Transaction</string>
    <string name="yesterday">Yesterday</string>
    <string name="cash">Cash</string>
    <string name="with">With</string>
    <string name="select_category">Select category</string>
    <string name="money">Money</string>
...
    <string name="text_info">Info</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">yes</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this transaction?</string>
    <string name="snack_bar_delete_text">Are you sure you want to delete this transaction?</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="add_new_category">Add new category</string>
    <string name="now">Now</string>
    <string name="search">Search</string>
    <string name="category_setting">Category setting</string>
    <string name="about">About us</string>
    <string name="rate_us">Rate Us</string>
    <string name="setting">Setting</string>
    <string name="chart">Chart</string>
    <string name="add_expenses_category">Add expenses category</string>
    <string name="add_income_category">Add income category</string>
    <string name="unable_to_recognize_category_type">Unable to recognize category type</string>
    <string name="jibam">Jibam</string>
    <string name="jibam_capital">JIBAM</string>

    <!--    ERRORS-->
    <string name="pls_select_category">Please select category</string>
...
        Please insert valid money.
        Inserted money should not be zero or negative
    </string>
    <string name="transactions">Transactions</string>

    <!--    CATEGORY NAMES-->
    <string name="food">food</string>
    <string name="hamburger">hamburger</string>
    <string name="vegetables">vegetables</string>
    <string name="fruits">fruits</string>
    <string name="transportation">transportation</string>
    <string name="shopping">shopping</string>
    <string name="sport">sport</string>
...
    <string name="health">health</string>
    <string name="gift">gift</string>
    <string name="office">office</string>
    <string name="insurance">insurance</string>
    <string name="car">car</string>
    <string name="tax">tax</string>
    <string name="salary">salary</string>
    <string name="awards">awards</string>
    <string name="grants">grants</string>
    <string name="sale">sale</string>
    <string name="rental">rental</string>
    <string name="refunds">refunds</string>
    <string name="coupons">coupons</string>
...
    <string name="close_category_list">Close category list</string>
    <string name="invalid_number_error">Invalid number</string>
    <!--    content descriptions-->
    <string name="empty">""</string>

    <string name="navigate_back_cd">Navigate back</string>
    <string name="navigation_drawer_cd">Navigation drawer</string>
    <!--    Error messages-->
    <string name="error_reason">"\n\nReason: "</string>
    <string name="unknown_error">Unknown error #02</string>
    <string name="error_reason_data_is_null">\n\nReason: The data is NULL.</string>
    <string name="error_reason_unknown_database_error">\n\nReason: Unknown database error!"</string>
    <string name="unable_to_get_categories_to_update_them">Unable to get categories to update them</string>
...
