<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.ssmmhh.jibam.presentation.util.ToolbarLayoutListener" />

        <variable
            name="viewmodel"
            type="com.ssmmhh.jibam.presentation.categories.viewcategories.ViewCategoriesViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.categories.viewcategories.ViewCategoriesFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar_with_back_btn_with_databinding"
            app:listener="@{listener}"
            app:toolbarTitle="@{@string/category_setting}" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </androidx.viewpager2.widget.ViewPager2>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/add_new_appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_size"
            android:background="?attr/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{(view) -> viewmodel.openAddCategory()}"
            app:liftOnScroll="false">

            <TextView
                android:id="@+id/txt_addNewCategory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:drawablePadding="0dp"
                android:focusable="true"
                android:gravity="center"
                android:onClick="@{(view) -> viewmodel.openAddCategory()}"
                android:paddingStart="28dp"
                android:paddingEnd="28dp"
                android:text="@string/add_new_category"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_round_add_24"
                app:drawableTint="?attr/colorOnPrimary" />
        </com.google.android.material.appbar.AppBarLayout>


    </LinearLayout>
</layout>