...
                            android:scaleType="center"
                            app:loadWithResourceId="@{viewmodel.categoryImage.getCategoryImageResourceId(context)}"
                            app:tint="@color/white" />
                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_categoryName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/category_name"
                        android:text="@={viewmodel.categoryName}"
                        android:textColor="?attr/colorOnSurface" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_category_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
...
